@@ -1,3 +1,9 @@
+Thu Sep  7 18:44:51 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>
+
+	* Added debug information to DB database reading code.
+
+	* Fix a type in matcher.  (om_weight -> om_docid)
+
 Thu Sep 07 17:44:24 BST 2000 Olly Betts
 
 	* net/socketcommon.cc: Improved a couple of exception messages.
